# AskMyDocs

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  vercel.json
.github/workflows/: rag-eval.yml
docs/: 01_getting_started.md  02_path_parameters.md  03_query_parameters.md  04_request_body.md  05_response_models.md  06_dependencies.md  07_security.md  08_middleware.md  09_error_handling.md  10_testing.md  11_deployment.md
eval/: evaluator.py  golden_dataset.json  test_quality_gates.py
src/: config.py
src/api/: main.py  models.py
src/generation/: generator.py  prompts.py
src/ingestion/: chunker.py  loader.py  pipeline.py
src/observability/: tracer.py
src/reranker/: cross_encoder.py
src/retrieval/: bm25_engine.py  hybrid.py  vector_engine.py
static/: app.js  index.html  styles.css
testenv/: pyvenv.cfg
tests/: test_api.py  test_bm25.py  test_chunker.py  test_generator.py  test_hybrid.py  test_reranker.py
