[project]
name = "askmydocs"
version = "1.0.0"
description = "Production-grade RAG system with hybrid retrieval, cross-encoder re-ranking, and citation enforcement"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "groq>=0.9.0",
    "chromadb>=0.4.22",
    "rank-bm25>=0.2.2",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "tiktoken>=0.6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests", "eval"]
asyncio_mode = "auto"
